mobile fixes (#70)
* fix: project cards not rendering properly on mobile

* fix: mobile sidebar too big

* fix: static renderer responsiveness

* chore: fix broken css linting

* various fixes & consolidate css for tiptap extensions

* fix: static renderer respects display width

* fix: blog card overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,6 +66,9 @@
   body {
     @apply bg-background text-foreground;
   }
+  ::-webkit-scrollbar {
+    display: none; /* Hides the scrollbar entirely */
+  }
 }
 
 /* Styles for WYSWIG Editor */
@@ -83,7 +86,7 @@ h5 {
 }
 
 .tiptap h2 {
-  @apply text-2xl sm:text-3xl md:text-4xl;
+  @apply text-xl sm:text-2xl md:text-3xl;
 }
 
 .tiptap h3 {
@@ -99,32 +102,18 @@ h5 {
 }
 
 .tiptap p {
-  @apply text-lg md:text-xl py-2 my-2;
+  @apply md:text-lg py-2 my-2;
   overflow: auto; /* Ensures paragraphs wrap around floated elements */
-}
-
-.static-render {
-  @apply p-5 rounded-sm overflow-clip;
 }
 
 .ProseMirror {
   @apply p-5;
 }
 
-.tiptap pre {
-  @apply bg-slate-800 p-2 md:p-5 rounded-lg w-90 md:w-[90%] md:mx-auto font-mono text-xs md:text-sm overflow-x-scroll overflow-hidden;
-}
-.tiptap pre.code-block {
-  @apply relative rounded-md p-4 text-white block;
-}
-
-.tiptap pre.code-block select {
-  @apply absolute top-2 right-2 rounded-md border border-border bg-muted px-2 py-1 text-xs text-muted-foreground;
-}
-
-/* This rule remains the same */
-.tiptap .code-block select {
-  @apply absolute top-2 right-2 rounded-md border border-border bg-muted px-2 py-1 text-xs text-muted-foreground;
+.ProseMirror,
+.tiptap {
+  min-width: 0;
+  max-width: 100%;
 }
 
 .tiptap .hljs-comment,
@@ -176,4 +165,13 @@ h5 {
 
 .tiptap .hljs-strong {
   font-weight: 700;
+}
+
+/* 
+  This is a fix to prevent overflow within the tiptap static renderer.
+  This is required because tiptap renders a div with display: table as the parent for all content.
+*/
+div:has(> #blog) {
+  table-layout: fixed;
+  width: 100%;
 }
